tests/paczka2/big_fuzzy/85902050.err
Error in line 3: BD9h S51 62,3
Error in line 5: BD9h S556 99,5
Error in line 7: BD9h A342 76,3
Error in line 15: BD9h S795 95,1
Error in line 18: wbRjMnjs A342 63,0
Error in line 41: S51 S795 67,7
Error in line 40: HF6QXfJ7 S556 66,1
Error in line 60: HF6QXfJ7 S51 59,1
Error in line 68: DTQbMGEK S556 29,6
Error in line 69: I49t4 S556 37,3
Error in line 53: GzdlK S51 43,9
Error in line 97: GzdlK S51 119,2
Error in line 100: I49t4 A342 0,3
Error in line 114: I49t4 A342 99,52
Error in line 115: I49t4 S795 48,1
Error in line 125: DTQbMGEK S51 64,d
Error in line 126: S51 A342 21,6
Error in line 112: DTQbMGEK S51 50,6
Error in line 129: I49t4 S556 12,5
Error in line 142: DTQbMGEK S51 78,7
Error in line 140: S51 S51 66,5
Error in line 152: S51 S51 33,5
Error in line 161: BD9h A342 6,0
Error in line 186: DTQbMGEK S556 100,0
Error in line 190: DTQbMGEK S795 57,9
Error in line 150: wbRjMnjs S51 3,3
Error in line 198: BD9h S795 39,1
Error in line 206: I49t4 A342 40,3
Error in line 204: S51 S795 23,0
Error in line 211: S51 A342 63,1
Error in line 229: BD9h S556 37,7
Error in line 236: HF6QXfJ7 S556 13,2
Error in line 240: HF6QXfJ7 S51 90,2
